<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Procrastination</string>
    <string name="copyright">&#169; 2012 Sebastian Kaspari</string>
    <string name="app_url">http://www.androidzeitgeist.com</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="menu_completed_tasks">View completed tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_addons">Addons</string>
    <string name="menu_about">About</string>
    <string name="menu_clear_tasks">Clear completed tasks</string>

    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>

    <string name="title_completed_tasks">Completed tasks</string>
    <string name="title_settings">Settings</string>
    <string name="title_addons">Addons</string>

    <string name="hint_task">Add a new task..</string>

    <string name="selected_tasks">%d selected</string>

    <string name="edit_task_dialog_title">Edit task</string>

    <string name="empty_history">No done tasks yet.</string>
    <string name="empty_widget">No tasks for today. Relax.</string>

    <string name="action_buy_widget">Buy widget</string>

    <string name="toast_tasks_cleared">Cleared completed tasks</string>

    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_mark_done">Mark as done</string>
    <string name="dialog_button_do_tomorrow">Do it tomorrow</string>

    <plurals name="notification_title">
        <item quantity="one">%d open task</item>
        <item quantity="other">%d open tasks</item>
    </plurals>
    <string name="notification_text">Tasks are waiting for you.</string>

    <string name="settings_category_notifications_title">Notifications</string>
    <string name="settings_category_notifications_description">Get reminded about open tasks.</string>

    <string name="settings_notification_title">Show notification</string>
    <string name="settings_notification_description">Show daily notification about open tasks.</string>

    <string name="settings_ongoing_notification_title">Ongoing notification</string>
    <string name="settings_ongoing_notification_description">Use notification that can\'t be removed until all tasks are done.</string>

    <string name="about_title">About</string>
    <string name="about_text"></string>

    <string name="addons_widget_title">Widget</string>
    <string name="addons_widget_text">A widget showing your open tasks for today on your home or lock screen.</string>
    <string name="addons_widget_thanks">Thanks for buying this addon and supporting the development of Procrastination! :)</string>

    <string name="billing_failed">In-app purchase failed.</string>
    <string name="billing_success">Purchase successful. Thanks!</string>
    <string name="billing_not_supported">In-app purchases are not supported by your device or currently not available. :(</string>

    <string name="motivation01">So much to do!</string>
    <string name="motivation02">Tomorrow is another day!</string>
    <string name="motivation03">Let\'s do something else!</string>
    <string name="motivation04">How about a break?</string>
    <string name="motivation05">Go for it!</string>

</resources>