<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_launcher" />

    <TextView
        style="@android:style/TextAppearance.Holo.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/version"
        style="@android:style/TextAppearance.Holo.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" />

    <TextView
        style="@android:style/TextAppearance.Holo.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/copyright" />

    <TextView
        style="@android:style/TextAppearance.Holo.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/app_url"
        android:autoLink="web" />

</LinearLayout>